# master_arbeit

./: 1  CalibrateYo.txt  ContinousRecording.txt  EE_To_Base_Continuous.txt  EE_To_Base_Sample.txt  MarkerToCamera.txt  Marker_To_Camera_Continuous.txt  README.md  RecordWhenTypeIn.txt  Try1.txt  empty  frames.gv  master_arbeit.workspace.user.f6d4b0c  simple01.txt
Points/000DataExamples/: 3dDataExample.txt  DataExample.txt
Points/001with_hand/: dong.txt  simple02.txt
bagfiles/: 2020-10-20-17-59-07.bag  2020-10-20-18-01-13.bag  2020-10-20-18-05-26.bag
berkay_franka_description/meshes/visual/: optoacousticProbeOrgin.dae  optoacousticProbe_biased.dae  optoacousticProbe_biased.stl
berkay_franka_description/robots/: panda_arm.urdf.xacro  panda_arm.xacro
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/azure_kinect_ros_driver/: node
devel/lib/franka_control/: franka_combined_control_node  franka_control_node
devel/lib/franka_gripper/: franka_gripper_node
devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
devel/lib/pic_reader/: ======FindMarker  FindMarker  HomoTrans  ShowPic
devel/lib/pkgconfig/: MarkerTrailer.pc  aruco_mapping.pc  azure_kinect_ros_driver.pc  franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_visualization.pc  info_dictionary.pc  pic_reader.pc  preparing.pc  save_info.pc  vrep.pc
pointclouds/001with_hand/: simple01.txt
src/HandEyeOffline/: Calibration.py  CalibrationYuan.py  CalibrationYuanOri.py
src/KalmanFilter/: SimpleKalman_chaos.py  Try1.txt
src/MarkerTrailer/: CMakeLists.txt
src/MarkerTrailer/RvizConfig/: MarkerPositions.rviz
src/MarkerTrailer/msg/: PositionOfMarker.msg
src/MarkerTrailer/scripts/: PublishAllMarkers.py  (+3 more)
src/VisualizeData/: 3Dvisualize.py  DataExample.txt  SimpleKalman.py  visualize.py
src/info_dictionary/: CMakeLists.txt
src/pic_reader/: CMakeLists.txt  package.xml
src/pic_reader/src/: HomoTrans.cpp  ShowPic.cpp
src/preparing/: CMakeLists.txt  package.xml  setup.py
src/preparing/msg/: ArucoMarker.msg
src/preparing/scripts/: FindMarker.py  FindMarker_Zhou.py  GetImage.py  GetImage_modified.py  GetImage_modified.py.autosave  GetImage_origin.py  PublishAllMarkers.py  PublishAllMarkers.py.autosave  PublishMarker.py  TestListener.py  affineInverse.py  image_pub.py  inverse.py  listener_openpose.py
src/preparing/src/: findmarker.cpp
src/save_info/: CMakeLists.txt  package.xml
src/vrep/: CMakeLists.txt  package.xml
(+54 files in other folders)
